--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
   justify-content: flex-end;
   background: rgb(0, 0, 0, 0.6);
   padding: 20px 10px;
+  box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+  position: absolute;
+  top: 0;
 }
 .navbar-container > ul {
   display: flex;
@@ -19,4 +22,139 @@
   text-transform: uppercase;
   margin-right: 40px;
   color: white;
+  letter-spacing: 0.1rem;
+  opacity: 50%;
+  transition: opacity 0.5s;
+}
+.navbar-container > ul > li:hover {
+  opacity: 100%;
+  cursor: pointer;
+}
+/* Showcase */
+
+.showcase-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url(assets/images/showcase.jpg);
+  background-size: cover;
+  background-position: center;
+  /* Overlay */
+  background-color: rgb(0, 0, 0, 0.6);
+  background-blend-mode: color;
+}
+.showcase-container > h1 {
+  font-weight: 600;
+  font-size: 4rem;
+  color: white;
+}
+.showcase-container > p {
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.25rem;
+  color: #eee;
+  border-bottom: 1.5px solid #fff;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  letter-spacing: 0.15rem;
+}
+.about-me-content {
+  display: flex;
+  align-items: center;
+  margin-top: 40px;
+}
+.about-me-content > img {
+  width: 320px;
+  height: 320px;
+  margin-right: 50px;
+}
+.about-me-content > p {
+  color: white;
+  line-height: 2rem;
+}
+/* HABILIDADES */
+.skills-content {
+  margin-top: 108px;
+  display: flex;
+  justify-content: space-between;
+}
+.skill-item {
+  display: flex;
+  background-color: #202020;
+  padding: 50px;
+  border-radius: 20px;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.skills-content .skill-item:nth-child(2) {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.skill-item span {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  color: white;
+  font-weight: 500;
+}
+.skill-item > p {
+  color: white;
+  opacity: 75%;
+}
+/*PROJECTS*/
+.projects-content {
+  margin-top: 118px;
+}
+.project-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+.project-item > img {
+  width: 300px;
+  height: 300px;
+}
+.project-item .project-text {
+  margin-left: 50px;
+  max-width: 600px;
+}
+.project-item .project-text > p {
+  color: white;
+  opacity: 75%;
+  line-height: 29px;
+}
+.project-item .project-text > h3 {
+  color: white;
+  font-size: 2.35rem;
+  font-weight: 500;
+}
+/*Utilites */
+.section-container {
+  width: 100%;
+  background-color: #111;
+  padding-top: 100px;
+  padding-bottom: 60px;
+}
+.section-content {
+  max-width: 1144px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.section-title {
+  font-weight: 600;
+  font-size: 3rem;
+  letter-spacing: 0.15;
+  color: #fff;
+  text-transform: uppercase;
+  padding-bottom: 8px;
+  padding-left: 8px;
+  padding-right: 8px;
+  border-bottom: 1.5px solid #fff;
+  text-align: center;
+  margin: auto;
+  width: fit-content;
 }
