--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   letter-spacing: 0.1rem;
   opacity: 50%;
   transition: opacity 0.5s;
+  font-size: 0.8rem;
 }
 .navbar-container > ul > li:hover {
   opacity: 100%;
@@ -114,6 +115,21 @@
   align-items: center;
   margin-bottom: 50px;
 }
+.projects-content .project-item:nth-child(2),
+.projects-content .project-item:nth-child(4) {
+  justify-content: flex-end;
+  text-align: right;
+}
+.projects-content .project-item:nth-child(2) > .project-item-image,
+.projects-content .project-item:nth-child(4) > .project-item-image {
+  order: 2;
+  margin-left: 50px;
+}
+.projects-content .project-item:nth-child(2) > .project-text,
+.projects-content .project-item:nth-child(4) > .project-text {
+  order: 1;
+}
+
 .project-item > img {
   width: 300px;
   height: 300px;
@@ -129,15 +145,56 @@
 }
 .project-item .project-text > h3 {
   color: white;
-  font-size: 2.35rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
+.project-item-image {
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+  border-radius: 15px;
+  box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+}
+.project-item-1 {
+  background-image: url(./assets/images/project-1.jpg);
+}
+.project-item-2 {
+  background-image: url(./assets/images/project-2.jpg);
+}
+.project-item-3 {
+  background-image: url(./assets/images/project-3.jpg);
+}
+.project-item-4 {
+  background-image: url(./assets/images/project-4.jpg);
+  background-position: center;
+}
+/* Fomulário */
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 100px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contact-form .form-input {
+  margin-bottom: 20px;
+}
+footer {
+  width: 100%;
+  background-color: black;
+  color: rgba(255, 255, 255, 0.75);
+  display: flex;
+  justify-content: space-between;
+  padding: 50px;
+}
+
 /*Utilites */
 .section-container {
   width: 100%;
   background-color: #111;
-  padding-top: 100px;
-  padding-bottom: 60px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 .section-content {
   max-width: 1144px;
@@ -146,7 +203,7 @@
 }
 .section-title {
   font-weight: 600;
-  font-size: 3rem;
+  font-size: 2.2rem;
   letter-spacing: 0.15;
   color: #fff;
   text-transform: uppercase;
@@ -157,4 +214,27 @@
   text-align: center;
   margin: auto;
   width: fit-content;
+}
+.form-input {
+  border: none;
+  border-radius: 10px;
+  background-color: #202020;
+  padding: 20px;
+  color: rgba(255, 255, 255, 0.5);
+  resize: none;
+}
+.form-input:focus {
+  outline: 1px solid rgba(255, 255, 255, 0.5);
+}
+.form-button {
+  border: none;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+.form-button:hover {
+  cursor: pointer;
 }
