--- a/style.css
+++ b/style.css
@@ -4,20 +4,29 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+a {
+  color: white;
+  text-decoration: none;
+}
+
+/* Navbar */
 .navbar-container {
   width: 100%;
   display: flex;
   justify-content: flex-end;
-  background: rgb(0, 0, 0, 0.6);
-  padding: 20px 10px;
-  box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.6);
+  padding: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: absolute;
   top: 0;
 }
+
 .navbar-container > ul {
   display: flex;
   list-style: none;
 }
+
 .navbar-container > ul > li {
   text-transform: uppercase;
   margin-right: 40px;
@@ -25,150 +34,178 @@
   letter-spacing: 0.1rem;
   opacity: 50%;
   transition: opacity 0.5s;
-  font-size: 0.8rem;
 }
+
 .navbar-container > ul > li:hover {
   opacity: 100%;
   cursor: pointer;
 }
-/* Showcase */
 
+/* Showcase */
 .showcase-container {
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-image: url(assets/images/showcase.jpg);
+  color: white;
+  background-image: url("./assets/images/showcase.jpg");
   background-size: cover;
   background-position: center;
+
   /* Overlay */
-  background-color: rgb(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: color;
 }
+
 .showcase-container > h1 {
   font-weight: 600;
   font-size: 4rem;
-  color: white;
 }
-.showcase-container > p {
+
+.showcase-container p {
   text-transform: uppercase;
   font-weight: 500;
   font-size: 1.25rem;
   color: #eee;
-  border-bottom: 1.5px solid #fff;
+  border-bottom: 1.5px solid white;
   padding-bottom: 8px;
   padding-left: 8px;
   padding-right: 8px;
   letter-spacing: 0.15rem;
 }
+
+/* SOBRE MIM */
 .about-me-content {
   display: flex;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 50px;
 }
-.about-me-content > img {
+
+.about-me-content img {
   width: 320px;
   height: 320px;
   margin-right: 50px;
 }
-.about-me-content > p {
+
+.about-me-content p {
   color: white;
   line-height: 2rem;
 }
+
 /* HABILIDADES */
 .skills-content {
   margin-top: 108px;
   display: flex;
   justify-content: space-between;
 }
+
 .skill-item {
-  display: flex;
   background-color: #202020;
   padding: 50px;
   border-radius: 20px;
   text-align: center;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+
 .skills-content .skill-item:nth-child(2) {
   margin-left: 50px;
   margin-right: 50px;
 }
+
 .skill-item span {
   margin-top: 15px;
   margin-bottom: 15px;
   color: white;
   font-weight: 500;
 }
-.skill-item > p {
+
+.skill-item p {
   color: white;
   opacity: 75%;
 }
-/*PROJECTS*/
+
+/* Projetos */
 .projects-content {
   margin-top: 118px;
 }
-.project-item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 50px;
-}
+
 .projects-content .project-item:nth-child(2),
 .projects-content .project-item:nth-child(4) {
   justify-content: flex-end;
   text-align: right;
 }
+
 .projects-content .project-item:nth-child(2) > .project-item-image,
 .projects-content .project-item:nth-child(4) > .project-item-image {
   order: 2;
   margin-left: 50px;
 }
+
 .projects-content .project-item:nth-child(2) > .project-text,
 .projects-content .project-item:nth-child(4) > .project-text {
   order: 1;
 }
 
+.project-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 50px;
+}
+
 .project-item > img {
   width: 300px;
   height: 300px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
 }
-.project-item .project-text {
+
+.project-item-image {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 15px;
+}
+
+.project-item-1 {
+  background-image: url("./assets/images/project-1.jpg");
+}
+
+.project-item-2 {
+  background-image: url("./assets/images/project-2.jpg");
+}
+
+.project-item-3 {
+  background-image: url("./assets/images/project-3.jpg");
+}
+
+.project-item-4 {
+  background-image: url("./assets/images/project-4.jpg");
+  background-position: center;
+}
+
+.project-text {
   margin-left: 50px;
   max-width: 600px;
 }
-.project-item .project-text > p {
+
+.project-item p {
   color: white;
   opacity: 75%;
   line-height: 29px;
 }
-.project-item .project-text > h3 {
+
+.project-item h3 {
   color: white;
-  font-size: 1.8rem;
+  font-size: 2.25rem;
   font-weight: 500;
 }
-.project-item-image {
-  background-size: cover;
-  width: 300px;
-  height: 300px;
-  border-radius: 15px;
-  box-shadow: 0px 4px 4px rgb(0, 0, 0, 0.25);
-}
-.project-item-1 {
-  background-image: url(./assets/images/project-1.jpg);
-}
-.project-item-2 {
-  background-image: url(./assets/images/project-2.jpg);
-}
-.project-item-3 {
-  background-image: url(./assets/images/project-3.jpg);
-}
-.project-item-4 {
-  background-image: url(./assets/images/project-4.jpg);
-  background-position: center;
-}
-/* Fomulário */
+
+/* Formulário */
 .contact-form {
   display: flex;
   flex-direction: column;
@@ -177,9 +214,11 @@
   margin-left: auto;
   margin-right: auto;
 }
+
 .contact-form .form-input {
   margin-bottom: 20px;
 }
+
 footer {
   width: 100%;
   background-color: black;
@@ -187,6 +226,10 @@ footer {
   display: flex;
   justify-content: space-between;
   padding: 50px;
+}
+.social-items a {
+  margin-right: 25px;
+  color: rgba(255, 255, 255, 0.75);
 }
 
 /*Utilites */
